--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ attrs==19.3.0
 autopep8==1.5.2
 Babel==2.8.0
 backcall==0.1.0
+bcrypt==3.1.7
 bleach==3.1.5
 cachetools==4.1.0
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 cloudpickle==1.4.1
+colorama==0.4.3
 cryptography==2.9.2
 decorator==4.4.2
 defusedxml==0.6.0
@@ -53,13 +55,14 @@ oauthlib==3.1.0
 packaging==20.3
 pandas==1.0.3
 pandocfilters==1.4.2
+paramiko==2.7.1
 parso==0.5.2
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
 pluggy==0.13.1
 prompt-toolkit==3.0.5
-protobuf==3.12.0
+protobuf==3.12.2
 psutil==5.7.0
 ptyprocess==0.6.0
 pyasn1==0.4.8
@@ -70,6 +73,7 @@ pydocstyle==5.0.2
 pyflakes==2.1.1
 Pygments==2.6.1
 pylint==2.5.2
+PyNaCl==1.4.0
 pyparsing==2.4.7
 PyQt5==5.12.3
 PyQt5-sip==12.7.2
@@ -79,6 +83,8 @@ python-dateutil==2.8.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.31.10
 pytz==2020.1
+pywin32==228
+pywin32-ctypes==0.2.0
 pyxdg==0.26
 pyzmq==19.0.1
 QDarkStyle==2.8.1
@@ -115,6 +121,7 @@ urllib3==1.25.9
 watchdog==0.10.2
 wcwidth==0.1.9
 webencodings==0.5.1
+wincertstore==0.2
 wrapt==1.12.1
 wurlitzer==2.0.0
 yapf==0.30.0
