--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,16 @@ attrs==19.3.0
 autopep8==1.5.3
 Babel==2.8.0
 backcall==0.2.0
+bcrypt==3.1.7
 bleach==3.1.5
+cachetools==4.1.0
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
 cloudpickle==1.5.0
+colorama==0.4.3
 cryptography==3.0
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 diff-match-patch==20200713
@@ -20,7 +24,14 @@ docutils==0.16
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.8.3
+google-api-core==1.17.0
+google-api-python-client==1.8.3
+google-auth==1.15.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+googleapis-common-protos==1.51.0
 helpdev==0.7.1
+httplib2==0.17.3
 idna==2.10
 imagesize==1.2.0
 intervaltree==3.0.2
@@ -39,8 +50,10 @@ jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 keyring==21.2.1
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==3.3.0
 mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.6.1
@@ -48,25 +61,33 @@ nbformat==5.0.7
 notebook==6.0.3
 numpy==1.19.0
 numpydoc==1.1.0
+oauthlib==3.1.0
 packaging==20.4
 pandas==1.0.5
 pandocfilters==1.4.2
+paramiko==2.7.1
 parso==0.7.0
 pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.2.0
 pluggy==0.13.1
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
+protobuf==3.12.2
 psutil==5.7.2
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pycparser==2.20
 pydocstyle==5.0.2
 pyflakes==2.2.0
 Pygments==2.6.1
 pylint==2.5.3
+PyNaCl==1.4.0
 pyparsing==2.4.7
+pypiwin32==223
 PyQt5==5.12.3
 PyQt5-sip==12.8.0
 PyQtWebEngine==5.12.1
@@ -75,6 +96,9 @@ python-dateutil==2.8.1
 python-jsonrpc-server==0.3.4
 python-language-server==0.34.1
 pytz==2020.1
+pywin32==228
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
 pyxdg==0.26
 pyzmq==19.0.1
 QDarkStyle==2.8.1
@@ -82,7 +106,10 @@ QtAwesome==0.7.2
 qtconsole==4.7.5
 QtPy==1.9.0
 requests==2.24.0
+requests-oauthlib==1.3.0
 rope==0.17.0
+rsa==4.0
+scikit-learn==0.23.0
 scipy==1.5.1
 SecretStorage==3.1.2
 Send2Trash==1.5.0
@@ -100,16 +127,19 @@ spyder==4.1.4
 spyder-kernels==1.9.2
 terminado==0.8.3
 testpath==0.4.4
+threadpoolctl==2.0.0
 toml==0.10.1
 tornado==6.0.4
 traitlets==4.3.3
 ujson==1.35
+uritemplate==3.0.1
 urllib3==1.25.9
 virtualenv==20.0.21
 watchdog==0.10.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wincertstore==0.2
 wrapt==1.12.1
 wurlitzer==2.0.1
 yapf==0.30.0
